create: connect normalize scss

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,8 @@
-//Подключение переменных//
+// Подключение переменных //
 @import "variables"  
-//Подключение баовых настроек//
+// Подключение баовых настроек //
 @import "settings"
-//Стили для блока header//
+// Подключение normalize//
+@import  "normalize"
+// Стили для блока header //
 @import "blocks/header"
