--- a/sass/blocks/header.sass
+++ b/sass/blocks/header.sass
@@ -4,3 +4,10 @@
     display: flex
     align-items: center
     justify-content: space-between
+    padding-bottom: 40px
+    padding-top: 40px
+.search
+  display: flex
+  &__input
+    width: 350px
+    height: 40px
