--- a/css/header.css
+++ b/css/header.css
@@ -20,10 +20,26 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
+  overflow: hidden;
+  border-radius: 6px;
+  height: 40px;
 }
 
 .search__input {
   width: 350px;
-  height: 40px;
+  height: 100%;
+  padding-left: 23px;
+  background-color: #f5fafe;
+  border: none;
+  font-size: 12px;
+  line-height: 15px;
+  color: #333333;
+}
+
+.search__button {
+  position: absolute;
+  width: 65px;
+  height: 100%;
 }
 /*# sourceMappingURL=header.css.map */
