--- a/sass/blocks/header.sass
+++ b/sass/blocks/header.sass
@@ -8,6 +8,21 @@
     padding-top: 40px
 .search
   display: flex
+  position: relative
+  overflow: hidden
+  border-radius: 6px
+  height: 40px
   &__input
     width: 350px
-    height: 40px
+    height: 100%
+    padding-left: 23px
+    background-color: #f5fafe
+    border: none
+    font-size: 12px
+    line-height: 15px
+    color: #333333
+  &__button
+    position: absolute
+    width: 65px
+    height: 100%
+    
