--- a/css/header.css
+++ b/css/header.css
@@ -39,7 +39,11 @@
 
 .search__button {
   position: absolute;
+  right: 0;
+  top: 0;
   width: 65px;
   height: 100%;
+  border: none;
+  background-color: #fff;
 }
 /*# sourceMappingURL=header.css.map */
