--- a/sass/blocks/header.sass
+++ b/sass/blocks/header.sass
@@ -3,7 +3,7 @@
   &-top 
     display: flex
     align-items: center
-    justify-content: space-between
+    justify-content: space-around
     padding-bottom: 40px
     padding-top: 40px
 .search
@@ -23,6 +23,12 @@
     color: #333333
   &__button
     position: absolute
+    right: 0
+    top: 0
     width: 65px
     height: 100%
-    
+    border: none
+    background-color: $primary
+.user
+  display: flex
+  align-items: center
