--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,11 @@
 
 body {
   font-family: 'Mulish', sans-serif;
+  color: #333333;
 }
 
 .container {
-  max-width: 1110 px;
+  max-width: 1110px;
   margin: auto;
 }
 
@@ -372,6 +373,11 @@ template {
   padding-top: 40px;
 }
 
+.header__search {
+  margin-right: auto;
+  margin-left: 108px;
+}
+
 .search {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -386,6 +392,7 @@ template {
   width: 350px;
   height: 100%;
   padding-left: 23px;
+  padding-right: 75px;
   background-color: #f5fafe;
   border: none;
   font-size: 12px;
@@ -400,6 +407,31 @@ template {
   width: 65px;
   height: 100%;
   border: none;
-  background-color: #fff;
+  background-color: #ec1f46;
+}
+
+.user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+
+.user__avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.user__name {
+  margin-left: 18px;
+  font-size: 14px;
+  line-height: 18px;
+  color: #333333;
 }
 /*# sourceMappingURL=style.css.map */
