--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,21 @@ template {
   margin-left: 108px;
 }
 
+.navbar-menu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .search {
   display: -webkit-box;
   display: -ms-flexbox;
