--- a/sass/blocks/header.sass
+++ b/sass/blocks/header.sass
@@ -9,6 +9,14 @@
   &__search
     margin-right: auto
     margin-left: 108px
+  &-menu
+    list-style-type: none
+    margin: 0
+    padding: 0
+    display: flex
+    align-items: center
+    justify-content: space-between
+    background-color: $dark
 .search
   display: flex
   position: relative
