--- a/css/style.css
+++ b/css/style.css
@@ -378,10 +378,14 @@ template {
   margin-left: 108px;
 }
 
+.navbar-bottom {
+  background-color: #0a223d;
+}
+
 .navbar-menu {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 31px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -391,6 +395,15 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  color: #ffffff;
+}
+
+.navbar__link {
+  color: inherit;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 18px;
 }
 
 .search {
