--- a/sass/blocks/header.sass
+++ b/sass/blocks/header.sass
@@ -9,14 +9,22 @@
   &__search
     margin-right: auto
     margin-left: 108px
+  &-bottom
+    background-color: $dark
   &-menu
     list-style-type: none
     margin: 0
-    padding: 0
+    padding: 31px 0
     display: flex
     align-items: center
     justify-content: space-between
-    background-color: $dark
+    color: $light
+  &__link
+    color: inherit
+    text-decoration: none
+    text-transform: uppercase
+    font-size: 14px
+    line-height: 18px
 .search
   display: flex
   position: relative
@@ -55,4 +63,4 @@
     font-size: 14px
     line-height: 18px
     color: $text-color
-  
+    
