fix: search input and menu-button

--- a/sass/blocks/header.sass
+++ b/sass/blocks/header.sass
@@ -6,6 +6,8 @@
     justify-content: space-between
     padding-bottom: 40px
     padding-top: 40px
+    &__menu-button
+    display: none
   &__search
     margin-right: auto
     margin-left: 108px
@@ -19,12 +21,14 @@
     align-items: center
     justify-content: space-between
     color: $light
-  &__link
-    color: inherit
-    text-decoration: none
-    text-transform: uppercase
-    font-size: 14px
-    line-height: 18px
+    &__link
+      color: inherit
+      text-decoration: none
+      text-transform: uppercase
+      font-size: 14px
+      line-height: 18px
+.logo
+  width: 177px
 .search
   display: flex
   position: relative
@@ -63,4 +67,5 @@
     font-size: 14px
     line-height: 18px
     color: $text-color
-    
+
+
