--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,4 +1,4 @@
-@media (max-width: 1200px)
+@media (max-width: 1200px) 
   .container
     max-width: 960px
 @media (max-width:992px)
@@ -29,7 +29,7 @@
       width: 16px
       height: 11px
       paddng: 0
-      align-items: center
+      align-items: space-between
       justify-content: center
       flex-direction: column
       border: none
@@ -38,7 +38,7 @@
       &__line
         width: 16px
         height: 1px
-        background-color: $text-color
+        background-color: $text-color      
  .search
    &-input
      width: 340px
@@ -46,10 +46,3 @@
   .logo
     width: 99px
 
-
-
-
-
-
-
-  
