--- a/css/style.css
+++ b/css/style.css
@@ -377,13 +377,13 @@ template {
   padding-top: 40px;
 }
 
+.navbar-top__menu-button {
+  display: none;
+}
+
 .navbar__search {
   margin-right: auto;
   margin-left: 108px;
-}
-
-.navbar__menu-button {
-  display: none;
 }
 
 .navbar-bottom {
@@ -397,9 +397,9 @@ template {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: space-between;
+      -ms-flex-align: space-between;
+          align-items: space-between;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -495,9 +495,16 @@ template {
   .navbar__search {
     margin-left: auto;
   }
+  .navbar-menu {
+    padding-top: 22px;
+    padding-bottom: 22px;
+  }
   .navbar-menu__link {
     font-size: 12px;
     line-height: 15px;
+  }
+  .search__input {
+    width: 340px;
   }
 }
 
@@ -515,12 +522,13 @@ template {
     display: flex;
     width: 16px;
     height: 11px;
+    paddng: 0;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -536,9 +544,34 @@ template {
   }
 }
 
+.search-input {
+  width: 340px;
+}
+
 @media (max-width: 576px) {
   .logo {
     width: 99px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 576px) {
+  .container {
+    max-width: 460px;
+    width: 92%;
+  }
+  .logo {
+    width: 99px;
+    margin-top: 28px;
+    margin-bottom: 28px;
+    margin-left: 20px;
+  }
+  .search__input {
+    display: none;
+  }
+  .menu-button {
+    margin-top: 30px;
+    margin-right: 20px;
+    margin-bottom: 30px;
   }
 }
 /*# sourceMappingURL=style.css.map */
