--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,4 +1,4 @@
-@media (max-width: 1200px) 
+@media (max-width: 1200px)
   .container
     max-width: 960px
 @media (max-width:992px)
@@ -13,9 +13,14 @@
     &__search
       margin-left: auto
     &-menu
+      padding-top: 22px
+      padding-bottom: 22px
       &__link
         font-size: 12px
         line-height: 15px
+  .search
+    &__input
+      width: 340px
 @media (max-width:768px)
   .container
     max-width: 576px
@@ -29,8 +34,8 @@
       width: 16px
       height: 11px
       paddng: 0
-      align-items: space-between
-      justify-content: center
+      align-items: center
+      justify-content: space-between
       flex-direction: column
       border: none
       background-color: #ffffff
@@ -38,11 +43,27 @@
       &__line
         width: 16px
         height: 1px
-        background-color: $text-color      
- .search
+        background-color: $text-color     
+.search
    &-input
-     width: 340px
+    width: 340px
 @media (max-width:576px)
   .logo
     width: 99px
-
+@media (min-width: 320px) and ( max-width: 576px )
+  .container
+    max-width: 460px
+    width: 92%
+  .logo
+    width: 99px
+    margin-top: 28px
+    margin-bottom: 28px
+    margin-left: 20px
+  .search
+    &__input
+      display: none
+  .menu
+    &-button
+      margin-top: 30px
+      margin-right: 20px
+      margin-bottom: 30px
