--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -7,7 +7,7 @@
     padding-bottom: 40px
     padding-top: 40px
     &__menu-button
-    display: none
+      display: none
   &__search
     margin-right: auto
     margin-left: 108px
@@ -18,7 +18,7 @@
     margin: 0
     padding: 31px 0
     display: flex
-    align-items: center
+    align-items: space-between
     justify-content: space-between
     color: $light
     &__link
@@ -67,3 +67,4 @@
     font-size: 14px
     line-height: 18px
     color: $text-color
+
